Fix alignment of alerts menu.

--- a/style.scss
+++ b/style.scss
@@ -22,8 +22,8 @@ div.repohead {
   }
 
   .context-pane {
-    margin: 5px 0 0 81px;
-    width: 180px;
+    margin-top: 5px;
+    width: 200px;
   }
 
   table.notifications {
